tests/error/tracing_errors/other_diagnostics.err
Error: Missing return value (at $FILE:12:4)
   | 
10 | @guppy
11 | def foo() -> int:
12 |     return
   |     ^^^^^^ Expected return value of type `int`

Guppy compilation failed due to 1 previous error
